force-app/main/default/objects/Goal__c/Goal__c.object-meta.xml
<CustomObject>
    <label>Goal</label>
    <nameField>
        <displayFormat>Goal ID - {0000}</displayFormat>
        <label>Goal ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Goals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>