force-app/main/default/objects/Goal__c/fields/Goal_Type__c.field-meta.xml
<CustomField>
    <fullName>Goal_Type__c</fullName>
    <label>Goal Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weight Loss</fullName>
            </value>
            <value>
                <fullName>Muscle Gain</fullName>
            </value>
            <value>
                <fullName>Endurance Improvement</fullName>
            </value>
            <value>
                <fullName>Flexibility Enhancement</fullName>
            </value>
            <value>
                <fullName>Health Maintenance</fullName>
            </value>
            <value>
                <fullName>Stress Reduction</fullName>
            </value>
            <value>
                <fullName>Nutritional Goals</fullName>
            </value>
            <value>
                <fullName>Performance Enhancement</fullName>
            </value>
            <value>
                <fullName>Recovery and Rehabilitation</fullName>
            </value>
            <value>
                <fullName>General Wellness</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>